force-app/main/default/objects/Training_Room__c/fields/Availibility__c.field-meta.xml
<CustomField>
    <fullName>Availibility__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Hidden field for availability on tab for New Batch Form</description>
    <label>Availability</label>
    <type>Checkbox</type>
</CustomField>