force-app/main/default/objects/Training_Room__c/listViews/Available_Rooms.listView-meta.xml
<ListView>
    <fullName>Available_Rooms</fullName>
    <columns>NAME</columns>
    <columns>RoomCapacity__c</columns>
    <columns>TrainingLocationName__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>AVAvailability__c</field>
        <operation>equals</operation>
        <value>Yes</value>
    </filters>
    <label>Available Rooms</label>
</ListView>