force-app/main/default/objects/Training_Room__c/listViews/Large_Rooms.listView-meta.xml
<ListView>
    <fullName>Large_Rooms</fullName>
    <columns>NAME</columns>
    <columns>RoomCapacity__c</columns>
    <columns>TrainingLocationName__c</columns>
    <columns>AVAvailability__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>RoomCapacity__c</field>
        <operation>greaterOrEqual</operation>
        <value>30</value>
    </filters>
    <label>Large Rooms</label>
</ListView>